--- a/templates/admin/adminbase.html
+++ b/templates/admin/adminbase.html
@@ -46,30 +46,22 @@
 
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
-            <nav class="navbar bg-white navbar-light">
+            <nav class="navbar bg-white navbar-light mt-3">
                 <a href="index.html"><img src="{% static 'img/logo.png' %}" alt="" class="navbar-brand mx-4 mb-3"></a>
                     
                 
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
-                        <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                        <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
+                        
+                        
                     </div>
                     
                     <div class="ms-3">
                         <h6 class="mb-0">{{user.username}}</h6>
-                        <span>Admin</span>
+                        
                     </div>
                 </div>
-                <div class="navbar-nav w-100">
-                    <a href="{% url 'adminpanel' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-                    
-                    <a href="{% url 'adminproducts' %}" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Product</a>
-                    <a href="{% url 'adminusers' %}" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Users</a>
-                    <a href="{% url 'adminorders' %}" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Orders</a>
-                    
-                    
-                </div>
+                {% include 'includes/admindashside.html'%}
             </nav>
         </div>
         <!-- Sidebar End -->
@@ -82,18 +74,14 @@
                 <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-user-edit"></i></h2>
                 </a>
-                <a href="#" class="sidebar-toggler flex-shrink-0">
-                    <i class="fa fa-bars"></i>
-                </a>
-                <form action = "#" method = "POST" class="d-none d-md-flex ms-4">
-                    <input class="form-control bg-dark border-0" type="search" placeholder="Search">
-                </form>
+                
+                
                 <div class="navbar-nav align-items-center ms-auto">
                     
                    
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <img class="rounded-circle me-lg-2" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                            
                             <span class="d-none d-lg-inline-flex">{{user.username}}</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
@@ -104,6 +92,7 @@
                 </div>
             </nav>
 {% block content %}
+
 {% endblock %}
 {% comment %} <div class="container-fluid pt-4 px-4">
     <div class="bg-secondary rounded-top p-4">
@@ -142,6 +131,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <!-- Template Javascript -->
 <script src="{% static 'admin/js/main.js' %}"></script>
+
+
 </body>
 
 </html>
