--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -46,23 +46,31 @@
     <div class="product__cart__item__text">
     <h6>{{ cart_item.product.product_name }}</h6>
     <span >${{ cart_item.product.price }}</span>
+    
     </div>
-    {% if cart_item.variation.all %}
-    {% for item in cart_items.variation.all %}
-    {{ item.variation_category }}:{{ item.variation_value }}
+    {% if cart_item.variations.all %}
+    {% for item in cart_item.variations.all %}
+    {{ item.variation_category | capfirst }}:{{ item.variation_value | capfirst }}
     {% endfor %}
     {% endif %}
+    
     </td>    
     <td class="">
     <div>
     <div class="col">
         <div class="input-group input-spinner">
             <div class="input-group-prepend">
-            <a href="{% url 'remove_cart' cart_item.product.id %}" class="btn btn-light" type="submit" id="button-plus"> <i class="fa fa-minus"></i> </a>
+            <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-minus"></i> </a>
             </div>
             <input type="text" class="w-25 text-center" style='border: 1px solid #fff;'  readonly value="{{ cart_item.quantity }}">
-            <div class="input-group-append">                                    
-            <a href="{% url 'add_cart' cart_item.product.id %}"  class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </a>                
+            <div class="input-group-append"> 
+              <form action = "{% url 'add_cart' cart_item.product.id %}" method = "POST"> 
+                {% csrf_token %}
+                {% for item in cart_item.variations.all %}
+                <input type = "hidden" name = "{{ item.variation_category | lower }}" value = "{{ item.variation_value | capfirst }}">
+                {% endfor %}                                  
+                <button class="btn btn-light" type="submit" id="button-plus"> <i class="fa fa-plus"></i> </button>
+              </form>                
             </div>
         </div> <!-- input-group.// -->
     </div>
@@ -71,9 +79,9 @@
     <td >${{ cart_item.sub_total }}</td>
     <td style='width:5rem'></td>
     <td >
-        <form action="{% url 'remove_item_cart' cart_item.product.id %}" method="post">
+        <form action="{% url 'remove_item_cart' cart_item.product.id cart_item.id %}" method="post">
           {% csrf_token %}
-          <button type="submit" class="btn btn-danger"><i class="fa fa-close"></i></button>
+          <button type="submit" onclick ="return confirm ('Are you sure you want to remove this item')" class="btn btn-danger"><i class="fa fa-close"></i></button>
         </form>
       </td>
     </tr>
