--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -27,8 +27,10 @@
     <div class="col-lg-8 col-md-6">
    
     <h6 class="checkout__title">Billing Details</h6>
-    <form action = "POST">
-    <div class="row">
+    <button type="submit" class="site-btn w-50">SELECT SAVED ADDRESS</button>
+    <form action ="{% url 'placeorder'%}" method = "POST">
+        {% csrf_token %}
+    <div class="row mt-5" >
     <div class="col-lg-6">
     <div class="checkout__input">
     <label for = "">First Name</label>
@@ -38,40 +40,35 @@
     <div class="col-lg-6">
     <div class="checkout__input">
     <label for = "">Last Name</label>
-    <input type="text" name = "first_name" class = "form-control" required>
+    <input type="text" name = "last_name" class = "form-control" required>
     </div>
     </div>
     </div>
     <div class="checkout__input">
-    <label for = "">Address</label>
-    <input type="text" name = "first_name" class = "form-control" required>
+    <label for = "">Address line 1</label>
+    <input type="text" name = "address_line_1" class = "form-control" required>
+    </div>
+    <div class="checkout__input">
+    <label for = "">Address line 2</label>
+    <input type="text" name = "address_line_2" class = "form-control" required>
     </div>
     <div class="checkout__input">
     <label for = "">City</label>
-    <input type="text" name = "first_name" class = "form-control" required>
+    <input type="text" name = "city" class = "form-control" required>
     </div>
     <div class="checkout__input">
     <label for = "">State</label>
-    <input type="text" name = "first_name" class = "form-control" required>
+    <input type="text" name = "state" class = "form-control" required>
     </div>
     
-    <div class="checkout__input">
-    <label for = "">Post code</label>
-    <input type="text" name = "first_name" class = "form-control" required>
-    </div>
-    <div class="row">
+    
+    
     <div class="col-lg-6">
     <div class="checkout__input">
     <label for = "">Phone</label>
-    <input type="text" name = "first_name" class = "form-control" required>
-    </div>
-    </div>
-    
-    </div>
-    
-    
-    
-   
+    <input type="text" name = "Phone" class = "form-control" required>    
+    </div>    
+    </div>       
     </div>
     <div class="col-lg-4 col-md-6">
     <div class="checkout__order">
@@ -99,14 +96,10 @@
     <span class="checkmark"></span>
     </label>
     </div>
-    <div class="checkout__input__checkbox">
-    <label for="paypal">
-    Paypal
-    <input type="checkbox" id="paypal">
-    <span class="checkmark"></span>
-    </label>
-    </div>
+    
+    
     <button type="submit" class="site-btn">PLACE ORDER</button>
+</form>
     </div>
     </div>
     </div>
