--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -18,14 +18,15 @@
 		<div class="card-body">
 			<div class="row">
 			<div class="col-md-6">
+				
 					<div class="card"style="text-align:center;">						
 					     <div class="card-body">
 							<h5 class="card-title">Total orders</h5>
-							<h4>99</h4>
-							<a href "#">View orders</a>
+							<h4>{{order_count}}</h4>
+							
 						 </div>
 					</div>
-											
+				
 			</div> 
 		
 		<div class="col-md-6">
