--- a/templates/accounts/addaddress.html
+++ b/templates/accounts/addaddress.html
@@ -12,8 +12,8 @@
 	<main class="col-md-9">
 		<article class="card">
 		<header class="card-header">
-			<strong class="d-inline-block mr-3">Change Password</strong>
-			<span>{{ user.username }}</span>
+			<strong class="d-inline-block mr-3">Add Address</strong>
+			
 		</header>
 		<div class="card-body">
             
@@ -39,6 +39,14 @@
                             <div class = "form-group mb-3">
                                 <label>State</label>
                                 <input type = "text" name="state"	placeholder="state" class="form-control" required>													
+						    </div>
+							<div class = "form-group mb-3">
+                                <label>Pincode</label>
+                                <input type = "text" name="Pincode"	placeholder="pincode" class="form-control" required>													
+						    </div>
+							<div class = "form-group mb-3">
+                                <label>Phone</label>
+                                <input type = "text" name="phone"	placeholder="phone" class="form-control" required>													
 						    </div>
                              
                                                           
