--- a/templates/includes/dashboardside.html
+++ b/templates/includes/dashboardside.html
@@ -5,6 +5,7 @@
         <a class="list-group-item {% if '/editprofile/' == request.path %}active{% endif %}" href ="{% url 'editprofile'%}">Edit Profile </a> 
         <a class="list-group-item {% if '/changepassword/' == request.path %}active{% endif %}" href ="{% url 'changepassword'%}">Change Password </a>
         <a class="list-group-item {% if '/addaddress/' == request.path %}active{% endif %}" href ="{% url 'addaddress'%}">Add address </a>
+        <a class="list-group-item {% if '/orderdetails/' == request.path %}active{% endif %}" href ="{% url 'orderdetails'%}">Order Details </a>
         <!--<a class="list-group-item" href="#">My orders </a>-->
         
     </ul>
