--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
               <li class="active"><a href="index-2.html">Home</a></li>
               <li><a href="{% url 'store' %}">Shop</a></li>              
               <li><a href="about.html">About Us</a></li>                              
-              <li><a href="contact.html">Contacts</a></li>
+              <li><a href="{% url 'contactus' %}">Contacts</a></li>
               {% if user.id is None %}
               
               <li><img src="{% static 'img/icon/user.png' %}" style='width:20px;' alt="">
@@ -101,7 +101,7 @@
           <div class="header__nav__option">
                         
             
-            <a href="#"><img src="{% static 'img/icon/heart.png' %}" alt=""></a>
+            <a href="{% url 'wishlist' %}"><img src="{% static 'img/icon/heart.png' %}" alt=""></a>
             <a href="{% url 'cart' %}"><img src="{% static 'img/icon/cart.png' %}" alt=""> </a>
             
           </div>
@@ -152,13 +152,13 @@
         </div>
       </div>
       <div class="row product__filter">
-        {% for product in products %}
+        {% for product in products|slice:":4" %}
         <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
           <div class="product__item">
             <div class="product__item__pic set-bg" data-setbg="{{ product.image.url }}">
               
               <ul class="product__hover">
-                <li><a href="#"><img src="{% static 'img/icon/heart.png'%}" alt=""></a></li>
+                <li><a href="{% url 'addwish' product.id %}"><img src="{% static 'img/icon/heart.png'%}" alt=""></a></li>
                 
               </ul>
             </div>
