--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -59,10 +59,10 @@
     <div>
     <div class="col">
         <div class="input-group input-spinner">
-            <div class="input-group-prepend">
-            <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-minus"></i> </a>
-            </div>
-            <input type="text" class="w-25 text-center" style='border: 1px solid #fff;'  readonly value="{{ cart_item.quantity }}">
+            <a onclick="cartdic({{cart_item.id}})" class="btn btn-light">
+              <div class="input-group-prepend"><i class="fa fa-minus"></i></div>
+            </a>
+            <input type="text" class="w-25 text-center" style='border: 1px solid #fff; 'id = "itemqty-{{cart_item.id}}"  readonly value="{{ cart_item.quantity }}">
             <div class="input-group-append"> 
               <form action = "{% url 'add_cart' cart_item.product.id %}" method = "POST"> 
                 {% csrf_token %}
@@ -70,16 +70,16 @@
                 <input type = "hidden" name = "{{ item.variation_category | lower }}" value = "{{ item.variation_value | capfirst }}">
                 {% endfor %}                                  
                 <button class="btn btn-light" type="submit" id="button-plus"> <i class="fa fa-plus"></i> </button>
-              </form>                
+              </form>
             </div>
         </div> <!-- input-group.// -->
     </div>
     </td> 
     
-    <td >${{ cart_item.sub_total }}</td>
+    <td id="sub_total">${{ cart_item.sub_total }}</td>
     <td style='width:5rem'></td>
     <td >
-        <form action="{% url 'remove_item_cart' cart_item.product.id cart_item.id %}" method="post">
+        <form action="{% url 'remove_item_cart' cart_item.id %}" method="post">
           {% csrf_token %}
           <button type="submit" onclick ="return confirm ('Are you sure you want to remove this item')" class="btn btn-danger"><i class="fa fa-close"></i></button>
         </form>
@@ -112,9 +112,9 @@
     <h6>Cart total</h6>
     <ul>
     
-    <li>Total <span>$ {{ total }}</span></li>
-    <li>Tax <span>$ {{ tax }}</span></li>
-    <li>Grand Total <span>$ {{ grand_total }}</span></li>
+    <li>Total <span id="total">$ {{ total }}</span></li>
+    <li>Tax <span id="tax">$ {{ tax }}</span></li>
+    <li>Grand Total <span id="grand_total">$ {{ grand_total }}</span></li>
     </ul>
     <a href="{% url 'checkout' %}" class="primary-btn">Proceed to checkout</a>
     </div>
@@ -123,6 +123,71 @@
     </div>
     </section>
     {% endif %}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="{% static 'vendor/sweetalert/sweetalert.min.js' %}"></script>
+    <script>
+      function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i<cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0,name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+      function cartdic(id){
+        var csrftoken = getCookie('csrftoken')
+        var url = "{% url 'remove_cart' %}"
+        let itemqty = document.getElementById(`itemqty-${id}`)
+        if (itemqty.value == 1){
+          Swal.fire({
+              title: 'Are you sure?',
+              text: "Remove From Cart....!",
+              icon: 'warning',
+              showCancelButton: true,
+              confirmButtonColor: '#3085d6',
+              cancelButtonColor: '#d33',
+              confirmButtonText: 'Yes, remove it!'
+            }).then((result) => {
+              if (result.isConfirmed) {
+                console.log("success")
+                window.location = `remove_item_cart/${id}`
+              }
+            })
+      }
+      else{
+        fetch(url, {
+          method:"POST",
+          headers:{
+            "Content-Type":"application/json",
+            "X-CSRFToken":csrftoken,
+          },
+          body:JSON.stringify({
+            id:id,
+          }),
+        })
+        .then(response => response.json())
+        .then((res)=>{
+          if(res.data=="true"){
+            itemqty.value=res.quantity,
+            total.innerHTML = `$ ${res.total}`,
+            tax.innerHTML = `$ ${res.tax}`,
+            grand_total.innerHTML = `$ ${res.grand_total}`,
+            sub_total.innerHTML = `$ ${res.sub_total}`
+        }
+        
+        })
+        
+      }
+    }
+    </script>
+    
 
 {% endblock %}
 
